--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,9 @@
         <button mat-icon-button *ngIf="this.common.showCart" (click)="showCart()">
             <mat-icon>shopping_cart</mat-icon>
         </button>
+        <button mat-icon-button (click)="showOrders()">
+            <mat-icon>toc</mat-icon>
+        </button>
         <button mat-icon-button (click)="logout()">
             <mat-icon>power_settings_new</mat-icon>
         </button>
