--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -15,6 +15,8 @@
                 </mat-form-field>
 
                 <button mat-raised-button type="button" color="primary" (click)="login()">Login</button>
+                &nbsp;&nbsp;&nbsp;&nbsp;
+                <button mat-raised-button type="button" color="primary" type="button" (click)="register()">Register</button>
             </form>
         </mat-grid-tile>
     </mat-grid-list>
