--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -23,6 +23,8 @@
                     <input matInput type="password" placeholder="Password" formControlName="password">
                 </mat-form-field>
                 <button mat-raised-button color="primary">Register</button>
+                &nbsp;&nbsp;&nbsp;&nbsp;
+                <button mat-raised-button color="primary" type="button" (click)="login()">Login</button>
             </form>
         </mat-grid-tile>
     </mat-grid-list>
